<resources>
    <string name="app_name">MyCalc</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num_point">.</string>

    <string name="opera_plus">+</string>
    <string name="opera_minus">-</string>
    <string name="opera_divide">/</string>
    <string name="opera_multi">*</string>
    <string name="opera_back">back</string>
    <string name="opera_equal">=</string>


</resources>
